# pgpmilter

./: Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  config.h  config.h.in  configure  configure.ac  main.c
.deps/: main.Po
